--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ li:hover {
 }
 
 #menu-toggle {
-  float: right;
+  float: left;
 }
 
 #sidebar-wrapper.toggled {
@@ -91,20 +91,24 @@ li:hover {
   left: 250px;
   width: 0;
   height: 100%;
-  margin-left: -250px;
+  margin-left: -260px;
   overflow-y: auto;
   background: #A9BCD0;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
-  padding: 5px;
+  padding-left: 10px;
 }
 
 #page-content-wrapper {
   width: 100%;
   position: absolute;
   padding: 5px;
+}
+
+#searchbar {
+  padding-left: 5px;
 }
 
 
