--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,10 @@ li:hover {
   font-size: 0.8em;
 }
 
+.footer {
+  text-align: center;
+}
+
 #show-toilets {
   font-size: 1.3em;
 }
@@ -111,6 +115,14 @@ li:hover {
   padding-left: 5px;
 }
 
+#logo {
+  width:25%;
+}
+
+#teamlogo {
+  width:30%;
+}
+
 
 @media only screen and (max-width : 600px) {
   h1 {
@@ -125,4 +137,9 @@ li:hover {
   #map {
     width: 100%;
   }
+
+  #logo {
+  width:40%;
+}
+
 }
